fix(MainPanel): overflow on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -167,6 +167,13 @@ p > a:hover,
   outline: none;
 }
 
+@media screen and (max-width: 400px) {
+  .ui.tabular.menu .item {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+}
+
 .ui.top.attached.header {
   background-color: hsl(0, 0%, 100%);
   color: hsl(211, 12%, 43%);
